[gd_scene load_steps=16 format=3 uid="uid://ci836c2xixpea"]

[ext_resource type="Script" uid="uid://bx2btv07nekcq" path="res://BrainVisualizer/UI/BrainMonitor/brain_visualizer_main_script.gd" id="1_jof7u"]
[ext_resource type="Script" uid="uid://dc1hx7ken3hq7" path="res://BrainVisualizer/UI/BrainMonitor/BVCam.gd" id="2_tgd5b"]
[ext_resource type="FontFile" uid="uid://uiuv87eim3o0" path="res://BrainVisualizer/UI/GenericResources/RobotoCondensed-Bold.ttf" id="3_afw7a"]
[ext_resource type="Texture2D" uid="uid://c7l76vkvl76ev" path="res://BrainVisualizer/UI/GenericResources/CorticalAreaIcons/knowns/___pwr.png" id="4_assex"]
[ext_resource type="Material" uid="uid://deu6gaedxwp2s" path="res://BrainVisualizer/UI/BrainMonitor/Resources/cortical_area.material" id="4_qnrq4"]
[ext_resource type="Script" uid="uid://tr6sj7y54j55" path="res://BrainVisualizer/UI/BrainMonitor/cortical_area_box.gd" id="5_tbl53"]
[ext_resource type="Material" uid="uid://clcu84y1o6gix" path="res://BrainVisualizer/UI/BrainMonitor/Resources/red.material" id="6_cljop"]
[ext_resource type="Script" uid="uid://b6qurl7t0yq72" path="res://BrainVisualizer/UI/BrainMonitor/FullScreenControl.gd" id="7_p6uww"]
[ext_resource type="PackedScene" uid="uid://c8s0gyef77enw" path="res://BrainVisualizer/UI/BrainMonitor/3d_indicator.tscn" id="8_xvar0"]
[ext_resource type="Script" uid="uid://ch6nh06f4n6oj" path="res://BrainVisualizer/UI/BrainMonitor/3d_indicator.gd" id="9_xa15g"]

[sub_resource type="ViewportTexture" id="ViewportTexture_hqsij"]

[sub_resource type="BoxMesh" id="BoxMesh_pj6ne"]
material = ExtResource("4_qnrq4")

[sub_resource type="BoxShape3D" id="BoxShape3D_5mii8"]

[sub_resource type="BoxMesh" id="BoxMesh_edosx"]
material = ExtResource("6_cljop")

[sub_resource type="MultiMesh" id="MultiMesh_2hjv0"]
transform_format = 1
mesh = SubResource("BoxMesh_edosx")

[node name="BrainMonitor" type="Node3D"]
script = ExtResource("1_jof7u")

[node name="BV_Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 650.0
focus_mode = 1
mouse_filter = 1
script = ExtResource("7_p6uww")
metadata/_edit_use_anchors_ = true

[node name="BVCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 60, 60, 100)
script = ExtResource("2_tgd5b")
fast_camera_speed_multiplier = 4.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="BVCam"]

[node name="blank_textbox" type="Sprite3D" parent="."]
process_mode = 1
pixel_size = 0.07
billboard = 2
double_sided = false
texture = SubResource("ViewportTexture_hqsij")

[node name="SubViewport" type="SubViewport" parent="blank_textbox"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
gui_disable_input = true
size = Vector2i(192, 96)
render_target_update_mode = 4

[node name="TextureRect" type="TextureRect" parent="blank_textbox/SubViewport"]
custom_minimum_size = Vector2(54, 54)
offset_left = 64.0
offset_right = 118.0
offset_bottom = 54.0
texture = ExtResource("4_assex")
expand_mode = 1

[node name="Label" type="Label" parent="blank_textbox/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 54.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_afw7a")
text = "set_text"
horizontal_alignment = 1

[node name="cortical_area_box" type="MeshInstance3D" parent="."]
visible = false
cast_shadow = 0
gi_mode = 0
mesh = SubResource("BoxMesh_pj6ne")
skeleton = NodePath("../../..")
script = ExtResource("5_tbl53")

[node name="Area3D" type="Area3D" parent="cortical_area_box"]
process_mode = 1
collision_mask = 0
monitorable = false
gravity_point_center = Vector3(0, 0, 0)
gravity_direction = Vector3(0, 0, 0)
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="cortical_area_box/Area3D"]
process_mode = 1
shape = SubResource("BoxShape3D_5mii8")

[node name="red_voxel" type="MultiMeshInstance3D" parent="."]
multimesh = SubResource("MultiMesh_2hjv0")

[node name="3d_indicator" parent="." instance=ExtResource("8_xvar0")]
script = ExtResource("9_xa15g")

[node name="coordlabel" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -43.0
offset_right = 60.0
offset_bottom = -20.0
grow_vertical = 0

[connection signal="input_event" from="cortical_area_box/Area3D" to="cortical_area_box" method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="cortical_area_box/Area3D" to="cortical_area_box" method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="cortical_area_box/Area3D" to="cortical_area_box" method="_on_area_3d_mouse_exited"]
